--- a/pdf/pom.xml
+++ b/pdf/pom.xml
@@ -43,6 +43,12 @@
       <version>5.4.1</version>
     </dependency>
     <!--itext生成pdf结束-->
+
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.49</version>
+    </dependency>
   </dependencies>
 
   <build>
